feat: extracurricular activity section, work experience update, and minor changes

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -3,27 +3,35 @@
 %-------------------------------------------------------------------------------
 \cvsection{Education}
 
-
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
-
 	%---------------------------------------------------------
+
 	\cventry
 	{MSc in Computer Science} % Degree
 	{University of Trento} % Institution
 	{Trento, Italy} % Location
 	{11/2024 - Present} % Date(s)
-	{}
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+			\item \textbf{Main Courses}: Advanced Programming, Multimedia Data Security, Innovation and Business in ICT.
+		\end{cvitems}
+	}
 
 	%---------------------------------------------------------
+
 	\cventry
 	{BSc in Computer Science} % Degree
 	{University of Trento} % Institution
 	{Trento, Italy} % Location
 	{11/2021 - 07/2024} % Date(s)
-	{}
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+			\item \textbf{Main Courses}: Algorithms and Data Structures, Databases, Software Engineering, Introduction to Computer and Network Security, Formal Languages and Compilers, Programming 1, Programming 2, Networks, Operating Systems.
+		\end{cvitems}
+	}
 
 	%---------------------------------------------------------
 \end{cventries}
