--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,13 +3,12 @@
 %-------------------------------------------------------------------------------
 \cvsection{Work Experience}
 
-
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
-
 	%---------------------------------------------------------
+
 	\cventry
 	{Full Stack Developer} % Job title
 	{Würth Phoenix} % Organization
@@ -19,6 +18,19 @@
 		\begin{cvitems} % Description(s) of tasks/responsibilities
 			\item Reduced installation and update times by 70\% by rewriting scripts in Ansible, optimizing the automation process and improving deployment efficiency.
 			\item Integrated KeyCloak into the company's core product, enabling Single Sign-On for hundreds of client companies, enhancing security and simplifying user authentication across diverse environments.
+		\end{cvitems}
+	}
+
+	%---------------------------------------------------------
+
+	\cventry
+	{DevOps Intern} % Job title
+	{Würth Phoenix} % Organization
+	{Bozen, Italy} % Location
+	{09/2023 - 10/2023} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+			\item Developed a solution to replace a series of Bash scripts with Ansible playbooks, improving the maintainability and idempotency of the product installations and updates. This effort streamlined the deployment process, reducing errors and minimizing manual intervention.
 		\end{cvitems}
 	}
 
