--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -1,24 +1,24 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Honors \& Awards}
-
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
-% \cvsubsection{International}
+\cvsection{Extracurricular Activity}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvhonors}
+\begin{cventries}
 	%---------------------------------------------------------
 
-	\cvhonor
-	{Silver Prize} % Award
-	{CyberChallenge.IT CTF Attack\&Defense National Final} % Event
-	{Turin, Italy} % Location
-	{2023} % Date(s)
+	\cventry
+	{Student Ambassador} % Affiliation/role
+	{Reply} % Organization/group
+	{Trento, Italy} % Location
+	{Sep. 2021 - Oct. 2023} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of experience/contributions/knowledge
+			\item Acted as a Student Ambassador for Reply, enhancing brand presence and connecting students with industry insights.
+		\end{cvitems}
+	}
 
 	%---------------------------------------------------------
-\end{cvhonors}
+\end{cventries}
