--- a/resume.tex
+++ b/resume.tex
@@ -87,7 +87,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
 {\today}
-{Gabriele Bocchi}
+{Gabriele Bocchi - Resume}
 {\thepage}
 
 
@@ -99,9 +99,8 @@
 \input{resume/experience.tex}
 \input{resume/education.tex}
 \input{resume/honors.tex}
+\input{resume/extracurricular.tex}
 \input{resume/skills.tex}
-% \input{resume/committees.tex}
-% \input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
