feat: add START Hach Hackathon award

--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -15,6 +15,14 @@
 	%---------------------------------------------------------
 
 	\cvhonor
+	{4th Place} % Award
+	{START Hach Hackathon} % Event
+	{St. Gallen, Switzerland} % Location
+	{2025} % Date(s)
+
+	%---------------------------------------------------------
+
+	\cvhonor
 	{Silver Prize} % Award
 	{CyberChallenge.IT CTF Attack\&Defense National Final} % Event
 	{Turin, Italy} % Location
