feat: add MariaDB Galera integration to experience section

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -18,6 +18,7 @@
 		\begin{cvitems} % Description(s) of tasks/responsibilities
 			\item Reduced installation and update times by 70\% by rewriting scripts in Ansible, optimizing the automation process and improving deployment efficiency.
 			\item Integrated KeyCloak into the company's core product, enabling Single Sign-On for hundreds of client companies, enhancing security and simplifying user authentication across diverse environments.
+			\item Integrated MariaDB Galera into the company's core product, providing a robust and highly available database solution that ensures data integrity and reliability across distributed systems.
 		\end{cvitems}
 	}
 
