feat: add project section and configurator project

--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -608,6 +608,18 @@
 	\end{tabular*}%
 }
 
+% Define a custom command for project entries
+% Usage: \cvproject{Project Name}{Project Link}{Project Description}
+\newcommand*{\cvproject}[3]{%
+	\vspace{-2.0mm}
+	\setlength\tabcolsep{0pt}
+	\setlength{\extrarowheight}{0pt}
+	\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} L{\textwidth - 4.5cm} R{4.5cm}}
+		\entrytitlestyle{#1} & \ifthenelse{\equal{#2}{}}{}{\entrylocationstyle{#2}} \\
+		\multicolumn{2}{L{\textwidth}}{\descriptionstyle{#3}}
+	\end{tabular*}%
+}
+
 % Define an environment for cvsubentry
 \newenvironment{cvsubentries}{%
 	\begin{center}
