--- a/resume.tex
+++ b/resume.tex
@@ -98,6 +98,7 @@
 \input{resume/summary.tex}
 \input{resume/experience.tex}
 \input{resume/education.tex}
+\input{resume/projects.tex}
 \input{resume/honors.tex}
 \input{resume/extracurricular.tex}
 \input{resume/skills.tex}
