feat: minor updates

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -16,7 +16,7 @@
 	{11/2024 - Present} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-			\item \textbf{Main Courses}: Advanced Programming, Multimedia Data Security, Innovation and Business in ICT.
+			\item \textbf{Main Courses}: Advanced Programming, Multimedia Data Security, Innovation and Business in ICT, Distributed Systems.
 		\end{cvitems}
 	}
 
