--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -29,11 +29,7 @@
 	{Würth Phoenix} % Organization
 	{Bozen, Italy} % Location
 	{09/2023 - 10/2023} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of tasks/responsibilities
-			\item Developed a solution to replace a series of Bash scripts with Ansible playbooks, improving the maintainability and idempotency of the product installations and updates. This effort streamlined the deployment process, reducing errors and minimizing manual intervention.
-		\end{cvitems}
-	}
+	{} % Description(s) of tasks/responsibilities
 
 	%---------------------------------------------------------
 \end{cventries}
