--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -9,7 +9,10 @@
 \begin{cvparagraph}
 	%---------------------------------------------------------
 
-	I am a passionate learner, dedicated to growth and development, currently balancing both work and studies. After earning my Bachelor's degree in July 2024, I began my Master's in Computer Science at the University of Trento. Since March 2024, I have been working as a Full Stack Developer at Würth Phoenix, a dynamic company based in Bozen. My strong curiosity drives me to seize every opportunity for growth and learning that comes my way.
+	I am a passionate learner, currently balancing work and studies while pursuing a Master’s in Computer Science at the University of Trento.\\
+	Since March 2024, I have been working as a Full Stack Developer at Würth Phoenix in Bozen.
+	I’m particularly interested in cybersecurity and enjoy playing Capture The Flag (CTF) challenges in my free time.
+	My curiosity drives me to constantly explore, learn, and grow.
 
 	%---------------------------------------------------------
 \end{cvparagraph}
